src/css/Home/home.css
.page-header__photo-credit {
    position: absolute;
    z-index: 99;
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
}
.photo-credit__wrapper {
    position: relative;
    width: 100%;
    height: 100%;
}
.photo-credit__wrapper p {
    -webkit-transform: rotate(-90deg);
    -moz-transform: rotate(-90deg);
    transform: rotate(-90deg);
    font-size: 1.2rem;
    padding: 0;
    width: 25px;
    height: 25px;
    position: absolute;
    bottom: 0;
    right: 0;
    overflow: visible;
    white-space: nowrap;
}
p.photo-credit--light-1 {
    color: rgba(255, 255, 255, 1.0);
    text-shadow: 0 0 15px #000;
}
p.photo-credit--light-2 {
    color: rgba(255, 255, 255, 0.8);
    text-shadow: 0 0 15px #000;
}
p.photo-credit--light-3 {
    color: rgba(255, 255, 255, 0.6);
    text-shadow: 0 0 15px #000;
}
p.photo-credit--dark-1 {
    color: rgba(0, 0, 0, 1.0);
    text-shadow: 0 0 15px #FFF;
}
p.photo-credit--dark-2 {
    color: rgba(0, 0, 0, 0.8);
    text-shadow: 0 0 15px #FFF;
}
p.photo-credit--dark-3 {
    color: rgba(0, 0, 0, 0.6);
    text-shadow: 0 0 15px #FFF;
}
@media (min-width: 768px) {
    .page-header__photo-credit {
        margin: 0 auto;
        padding: 0;
    }
    .page-header__image--inset .page-header__photo-credit {
        width: 900px;
        margin-left: calc(50% - 450px);
    }
}

/* Homepage Carousel */
/* .carousel__slide-content {
    width: 100%;
    padding: 0 15px;
}
@media (min-width: 768px) {
    .carousel__slide-content {
        width: 100%;
    }
}
@media (min-width: 992px) {
    .carousel__slide-content {
        width: 100%;
    }
} */

@media (min-width: 1200px) {
    .carousel__slide-content {
        width: 1100px;
        padding: 0;
    }
}
@media (min-width: 1400px) {
    .carousel__slide-content {
        width: 1200px;
    }
}

/* Ad banner */
.advertising-dc {
    display: flex;
    justify-content: center;
    padding: 1rem 0;
}

.ad-img {
    max-width: 100%;
    height: auto;
    display: none;
}

.ad-img--mobile { display: block; }

@media (min-width: 768px) {
    .ad-img--mobile    { display: none; }
    .ad-img--tablet    { display: block; }
}

@media (min-width: 992px) {
    .ad-img--tablet     { display: none; }
    .ad-img--leaderboard { display: block; }
}

